samples/_failures_safe/1761073734_1848ad_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b5b9eb97.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_b5b9eb97.c:163:9: error: expected declaration or statement at end of input
  163 |         parser_advance(parser);
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_b5b9eb97.c:163:9: error: expected declaration or statement at end of input
